--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>TajMahal Restaurant</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app smoothly.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
